--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.4
+  shared_preferences: ^0.5.12+2
 
 dev_dependencies:
   flutter_test:
